# rf-generators

./: README.md  pyproject.toml
examples/: check_cesar1312.py  check_citoplus.py
src/rf_generators/: __init__.py  cesar_1312.py  cito_plus_1310.py
tests/: conftest.py  test_cesar_1312.py  test_cito_plus_1310.py
